# pre-commit-hooks-for-ansible

./: .pre-commit-hooks.yaml  .pre-commit-hooks.yml  .travis.yml  MANIFEST.in  README.rst  azure-pipelines.yml  setup.cfg  tox.ini
hooks/: check_file_has_some_contents.py  check_new_lines.py  check_utf8_with_unix_style_new_lines.py
src/: conftest.py
src/pre_commit_hooks_for_ansible/: check_file_exists.py  check_file_has_some_contents.py
tests/: common.py  test_check_file_exists.py  test_check_file_has_some_contents.py  test_check_new_lines.py  test_check_utf8_with_unix_style_new_lines.py  test_common.py  test_integration.py
tests/res/check_new_lines/: 10_ng.yml  10_ok.yml
tests/res/check_utf8_with_unix_style_new_lines/: 10_ng_encoding_sjis.yml  30_ng_encoding_utf-8_with_bom.yml
