# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = pre_commit_hooks_for_ansible
description = pre-commit hook scripts for Ansible
project_urls =
    CI: Travis = https://travis-ci.org/ssato/pre-commit-hooks-for-ansible
    CI: GitHub Actions = https://github.com/ssato/pre-commit-hooks-for-ansible/actions?query=workflow%%3ATests"
    CI: Azure Pipelines = https://dev.azure.com/satorusatoh0471/pre-commit-hooks-for-ansible/_build/results?buildId=13&view=results
    Bug Tracker = https://github.com/ssato/pre-commit-hooks-for-ansible/issues
    Source = https://github.com/ssato/pre-commit-hooks-for-ansible
long_description = file: README.rst
author = Satoru SATOH
author_email = ssato@redhat.com
maintainer = Satoru SATOH
maintainer_email = ssato@redhat.com
license = MIT
license_file = LICENSE.MIT
url = https://github.com/ssato/pre-commit-hooks-for-ansible
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Utilities

[options]
packages = find:

include_package_data = True
install_requires = pre-commit

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
console_scripts =
    check-utf8-with-unix-style-new-lines = pre_commit_hooks_for_ansible.check_utf8_with_unix_style_new_lines:main
    check-file-has-some-contents = pre_commit_hooks_for_ansible.check_file_has_some_contents:main
    check-file-exists = pre_commit_hooks_for_ansible.check_file_exists:main

[tool:pytest]
testpaths =
    tests
    src

python_files = *.py
addopts = --doctest-modules

[mypy]
ignore_missing_imports = True
warn_unused_ignores = False

# vim:sw=4:ts=4:et:
